--- a/files/cto-bootstrap/extend-bootstrap/less/responsive-767px-max.less
+++ b/files/cto-bootstrap/extend-bootstrap/less/responsive-767px-max.less
@@ -90,6 +90,10 @@
 			box-sizing: border-box;
 			height: auto;
 		}
+		
+		.radio_container span {
+			display: block;
+		}
 	}
 	
 	// comment field styling
